css/layout.css
/* ... */
.section.started.section-title .started-content .h-subtitle p {
	margin: 0;
	font-size: 20px;
	line-height: 1.5;
}

.section.started .mouse_btn {
	font-size: 24px;
	color: #4bffa5;
	text-align: center;
	position: absolute;
	width: 20px;
	height: 40px;
	left: 50%;
	bottom: 7%;
	margin-left: -10px;
	z-index: 2;
}

.section.started .mouse_btn .icon {
	position: relative;
	top: 0px;
	animation: mouse-anim 1s ease-out 0s infinite;
}

.section.started .swiper-nav {
	position: absolute;
	left: calc(20% + 35px);
	bottom: 120px;
	width: 66px;
	height: 24px;
	z-index: 3;
}

.section.started .swiper-nav .swiper-button-prev,
.section.started .swiper-nav .swiper-button-next {
	width: 20px;
	height: 20px;
	margin-top: -10px;
	background: none;
	font-size: 22px;
	color: #FFF;
	text-decoration: none;
	transition: all 0.3s ease 0s;
	-moz-transition: all 0.3s ease 0s;
	-webkit-transition: all 0.3s ease 0s;
	-o-transition: all 0.3s ease 0s;
}


.section.started + .section,
.section.started.layout-creative + .section {
	margin-top: 70px;
}


.section.started.section-title .started-content .typed-bread,
.section.started.layout-creative .started-content .typed-bread,
.background-enabled .section.started.section-title .started-content .typed-bread,
.background-enabled .section.started.layout-creative .started-content .typed-bread {
	top: auto;
	font-size: 16px;
	line-height: 1.9;
	color: rgba(255, 255, 255, 0.5);
	font-weight: 400;
	opacity: 1;
}


.section.started.section-title .started-content .typed-bread a,
.section.started.layout-creative .started-content .typed-bread a {
	color: #FFF;
	text-decoration: none;
	font-weight: 500;
	opacity: 1;
}


.section.started .started-content .typed-cursor,
.section.started.layout-creative .mouse_btn,
.section.started.layout-post-creative .mouse_btn {
	display: none !important;
}


.section.started .swiper-button-prev, .section.started .swiper-container-rtl .swiper-button-next {
	left: 0;
	right: auto;
}


.section.started .swiper-button-next, .section.started .swiper-container-rtl .swiper-button-prev {
	left: auto;
	right: 0;
}


.started-carousel {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
}

.started-carousel .swiper-container,
.started-carousel .swiper-wrapper {
	height: 100%;
}

.started-carousel .swiper-slide {
	opacity: 1 !important;
}

.started-carousel .swiper-slide.first {
	z-index: 2;
}

.started-carousel .main-img {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-position: center center;
	background-size: cover;
	background-repeat: no-repeat;
	clip-path: polygon(0 0, 20% 0, 20% 0, 40% 0, 40% 0, 60% 0, 60% 0, 80% 0, 80% 0, 100% 0, 100% 0, 100% 100%, 100% 100%, 80% 100%, 80% 100%, 60% 100%, 60% 100%, 40% 100%, 40% 100%, 20% 100%, 20% 100%, 0 100%);
	-webkit-clip-path: polygon(0 0, 20% 0, 20% 0, 40% 0, 40% 0, 60% 0, 60% 0, 80% 0, 80% 0, 100% 0, 100% 0, 100% 100%, 100% 100%, 80% 100%, 80% 100%, 60% 100%, 60% 100%, 40% 100%, 40% 100%, 20% 100%, 20% 100%, 0 100%);
	transition: 1s all cubic-bezier(0.165, 0.85, 0.45, 1) 0s;
	-moz-transition: 1s all cubic-bezier(0.165, 0.85, 0.45, 1) 0s;
	-webkit-transition: 1s all cubic-bezier(0.165, 0.85, 0.45, 1) 0s;
	-o-transition: 1s all cubic-bezier(0.165, 0.85, 0.45, 1) 0s;
}

.started-carousel .swiper-slide.swiper-clip-active .main-img {
	clip-path: polygon(0 0, 20% 0, 20% 100%, 40% 100%, 40% 0, 60% 0, 60% 100%, 80% 100%, 80% 0, 100% 0, 100% 0, 100% 100%, 100% 0%, 80% 0%, 80% 100%, 60% 100%, 60% 0%, 40% 0%, 40% 100%, 20% 100%, 20% 0%, 0 0%);
	-webkit-clip-path: polygon(0 0, 20% 0, 20% 100%, 40% 100%, 40% 0, 60% 0, 60% 100%, 80% 100%, 80% 0, 100% 0, 100% 0, 100% 100%, 100% 0%, 80% 0%, 80% 100%, 60% 100%, 60% 0%, 40% 0%, 40% 100%, 20% 100%, 20% 0%, 0 0%);
}


.section.started .mouse_btn {
	left: auto;
	right: calc(20% + 35px);
	margin-left: 0;
}

/* section started desktop */
@media (min-width: 1200px) {
	.section.started .started-content .logo {
		top: -11.5vh;
		left: -18.5vw;
		width: 56vw;
		height: 80vh;
	}
	.section.started.personal .started-content .h-title {
		margin-left: 0;
		margin-top: 0;
		left: 50vw;
		top: 60vh;
		bottom: auto;
	}
}

/* section started tablet */
@media (max-width: 1199px) {
	.section.started.layout-creative, .section.started.layout-post-creative {
		padding-top: 35vw;
		padding-left: 50px;
		padding-right: 50px;
	}


	.section.started .started-content .h-title {
		left: 50px;
	}


	.section.started .started-content .h-title br {
		display: none;
	}


	.section.started .started-content .h-subtitle,
	.section.started .started-content .typed-subtitle,
	.section.started .started-content .typed-bread {
		margin-top: -35px;
		font-size: 60px;
		line-height: 70px;
	}


	.section.started.section-title .started-content .h-subtitle,
	.section.started.section-title .started-content .typed-subtitle,
	.section.started.section-title .started-content .typed-bread {
		padding-left: 0;
		left: 50px;
	}


	.section.started.personal .started-content .typed-subtitle,
	.section.started.personal .started-content .typed-bread {
		left: 50px;
		width: auto;
	}


	.section.started .swiper-nav {
		left: 50px;
	}


	.section.started .started-content .logo {
		top: -50px;
		left: -150px;
		width: 640px;
		height: 560px;
	}


	.section.started.personal .started-content .h-title {
		margin-left: 15px;
		margin-top: 115px;
		width: 320px;
	}


	.section.started.layout-creative .started-content .h-title,
	.section.started.layout-creative .started-content .h-subtitle,
	.section.started.layout-creative .started-content .typed-subtitle,
	.section.started.layout-creative .started-content .typed-bread,
	.section.started.layout-creative .started-content .typed-cursor {
		margin-left: 0;
	}


	.section.started .mouse_btn {
		left: auto;
		right: 120px;
		margin-left: 0;
	}

}
/* ... */

